# aws-event-listener

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yml
snslistener/: cli.py
src/: constants.rs  main.rs  resources.rs
