[tool.poetry]
name = "snslistener"
version = "0.1.0"
description = ""
authors = ["Simon Walker <swalker@pixsystem.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.6"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]
pudb = "^2021.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snslistener = "snslistener.cli:main"
